# xmr-stak

./: .gitignore  CHANGELOG.md  CLEANUP-PLAN.md  CMakeLists.txt  CONTRIBUTING.md  CRITICAL-BUG-REPORT.md  MODERNIZATION-PLAN.md  NOTICE  README.md  REFACTOR-PLAN-V2.md  REFACTOR-PLAN.md  RELEASE-v3.0.0.md  RESET-NOTES.md  SESSION-NOTES.md  THIRD-PARTY-LICENSES  test-both.sh  test-mine-remote.sh  test-mine.sh  vcpkg.json
.github/workflows/: build.yml  release.yml
build-cpu/: Makefile  cmake_install.cmake
build-test/: Makefile  cmake_install.cmake
cmake/: mingw-w64-x86_64.cmake
doc/: FAQ.md  README.md  troubleshooting.md  tuning.md  usage.md
doc/compile/: compile.md  compile_Linux.md
docs/: AUTOTUNE.md  BUILD-MATRIX.md  CN-GPU-WHITEPAPER.md  POLISH-PLAN.md  POOL-NETWORK.md  REWRITE-PLAN.md
docs/benchmarks/: BASELINE-ALL-GPUS.md  BASELINE-RX9070XT.md  SESSION-48-CUDA-INTENSITY.md
docs/history/: MODERNIZATION-PLAN.md  REFACTOR-PLAN-V2.md
gui/: app.js  index.html  style.css
n0s/: jconf.cpp  jconf.hpp  params.hpp  version.cpp  version.hpp
n0s/autotune/: autotune_candidates.hpp  autotune_entry.cpp  autotune_manager.cpp  autotune_manager.hpp  autotune_persist.cpp  autotune_persist.hpp  autotune_runner.cpp  autotune_score.hpp  autotune_types.hpp
n0s/backend/: backendConnector.cpp  backendConnector.hpp  cryptonight.hpp  globalStates.cpp  kernel_profile.hpp  miner_work.hpp
n0s/backend/amd/: autoAdjust.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
n0s/backend/amd/amd_gpu/: gpu.cpp  gpu.hpp  gpu_device.cpp
n0s/backend/amd/amd_gpu/opencl/: cryptonight.cl  cryptonight_gpu.cl
n0s/backend/cpu/: autoAdjust.hpp  autoAdjustHwloc.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
n0s/backend/cpu/crypto/: cn_gpu.hpp  cryptonight.h  cryptonight_aesni.h  cryptonight_common.cpp  keccak.cpp  keccak.hpp  soft_aes.hpp
n0s/backend/nvidia/: jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
n0s/backend/nvidia/nvcc_code/: cuda_aes.hpp  cuda_context.hpp  cuda_cryptonight_gpu.hpp  cuda_device.cu  cuda_dispatch.cu  cuda_dispatch.hpp  cuda_extra.hpp  cuda_keccak.hpp  cuda_phase2_3.cu  cuda_phase4_5.cu
n0s/cli/: cli-miner.cpp
n0s/http/: api.cpp  api.hpp  embedded_assets.hpp  httpd.cpp  httpd.hpp  webdesign.cpp
n0s/misc/: banner.cpp  banner.hpp  console.cpp  console.hpp  executor.cpp  executor.hpp  gpu_telemetry.cpp  gpu_telemetry.hpp  hashrate_history.hpp  jext.hpp  nvml_wrapper.cpp  nvml_wrapper.hpp  telemetry.cpp  telemetry.hpp  utility.cpp
n0s/net/: jpsock.cpp  jpsock.hpp  msgstruct.hpp  socket.cpp  socks.hpp
n0s/platform/: compat.hpp  platform_windows.cpp
scripts/: build-matrix.sh  build-windows.ps1  container-build-opencl.sh  container-build.sh  cross-build-windows.sh  embed_assets.sh  matrix-test.sh  test-remote-binary.sh
tests/: CMakeLists.txt  benchmark_harness  benchmark_harness.cpp  build_autotune_test.sh  build_harness.sh  cn_gpu_harness.cpp  test-mine.sh  test_autotune.cpp
xmrstak/: jconf.cpp  jconf.hpp  params.hpp  pools.tpl  version.cpp
xmrstak/backend/: backendConnector.cpp  backendConnector.hpp  cryptonight.hpp  globalStates.cpp  globalStates.hpp  iBackend.hpp  miner_work.hpp  plugin.hpp  pool_data.hpp
xmrstak/backend/amd/: OclCryptonightR_gen.cpp  autoAdjust.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/amd/amd_gpu/: gpu.cpp  gpu.hpp
xmrstak/backend/amd/amd_gpu/opencl/: cryptonight.cl  cryptonight_gpu.cl
xmrstak/backend/cpu/: autoAdjust.hpp  autoAdjustHwloc.hpp  hwlocMemory.cpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/cpu/crypto/: cn_gpu.hpp  cn_gpu_avx.cpp  cn_gpu_ssse3.cpp  cryptonight.h  cryptonight_aesni.h  cryptonight_common.cpp  soft_aes.hpp  variant4_random_math.h
xmrstak/backend/nvidia/: CudaCryptonightR_gen.cpp  CudaCryptonightR_gen.hpp  autoAdjust.hpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/nvidia/nvcc_code/: cuda_compat.hpp  cuda_context.hpp  cuda_core.cu  cuda_cryptonight_gpu.hpp  cuda_extra.cu  cuda_extra.hpp  cuda_kernels.cu
xmrstak/cli/: cli-miner.cpp
xmrstak/http/: httpd.cpp  webdesign.cpp
xmrstak/misc/: coinDescription.hpp  configEditor.hpp  console.cpp  console.hpp  environment.cpp  environment.hpp  executor.cpp  executor.hpp  telemetry.cpp  telemetry.hpp  uac.cpp  utility.cpp  utility.hpp
xmrstak/net/: jpsock.cpp  jpsock.hpp  msgstruct.hpp  socket.cpp
